--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "@mdi/js": "^5.9.55",
     "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "@vue/cli-plugin-babel": "^4.5.11",
     "@vue/cli-plugin-pwa": "^4.5.11",
     "@vue/cli-plugin-typescript": "^4.5.11",
@@ -42,14 +44,17 @@
     "@vue/test-utils": "^1.1.3",
     "babel-core": "6.26.3",
     "cors": "^2.8.5",
+    "eslint": "^7.21.0",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "node-sass": "^5.0.0",
+    "prettier": "^2.2.1",
     "sass-loader": "^10.1.1",
     "selenium-webdriver": "^4.0.0-alpha.8",
     "source-map-explorer": "^2.5.2",
     "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.2.3",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "vue-cli-plugin-vuetify": "^2.1.0",
     "vue-template-compiler": "^2.5.22",
     "vuetify-loader": "^1.7.2",
