--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   pull_request:
-    branches: [stag, prod]
+    branches: [master, stag, prod]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
