--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^2.6.0",
     "vue-class-component": "^7.2.6",
     "vue-i18n": "^8.22.4",
+    "vue-jest": "^3.0.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.3",
