--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ name: CI
 
 # Controls when the action will run.
 on:
+  push:
+    branches: [master]
   # Triggers the workflow on push or pull request events but only for the master branch
   pull_request:
     branches: [master, stag, prod]
