--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^26.6.3",
     "piexifjs": "^1.0.6",
     "register-service-worker": "^1.0.0",
+    "sanitize-html": "^2.3.2",
     "sass": "^1.32.6",
     "typesafe-vuex": "^3.1.1",
     "vee-validate": "^3.4.5",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@mdi/js": "^5.9.55",
     "@types/jest": "^26.0.20",
+    "@types/sanitize-html": "^1.27.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "@vue/cli-plugin-babel": "^4.5.11",
