Use DOMPurify instead

--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "dayjs": "^1.10.4",
+    "dompurify": "^2.2.7",
     "intersection-observer": "^0.12.0",
     "jest": "^26.6.3",
     "piexifjs": "^1.0.6",
     "register-service-worker": "^1.0.0",
-    "sanitize-html": "^2.3.2",
     "sass": "^1.32.6",
     "typesafe-vuex": "^3.1.1",
     "vee-validate": "^3.4.5",
