--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "piexifjs": "^1.0.6",
     "register-service-worker": "^1.0.0",
     "sass": "^1.32.6",
+    "tiptap": "^1.32.1",
+    "tiptap-extensions": "^1.35.1",
     "typesafe-vuex": "^3.1.1",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.0",
