--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "6.26.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eslint": "^7.21.0",
     "eslint-plugin-prettier": "^3.1.3",
