--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.10.4",
     "dompurify": "^2.2.7",
+    "html2canvas": "^1.0.0-rc.7",
     "intersection-observer": "^0.12.0",
     "jest": "^26.6.3",
     "piexifjs": "^1.0.6",
