--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sentry/tracing": "^5.30.0",
     "@sentry/vue": "^5.30.0",
     "axios": "^0.21.1",
+    "chafan-vue-editors": "^0.1.4",
     "core-js": "^3.8.3",
     "dayjs": "^1.10.4",
     "dompurify": "^2.2.7",
@@ -25,9 +26,6 @@
     "piexifjs": "^1.0.6",
     "register-service-worker": "^1.0.0",
     "sass": "^1.32.6",
-    "tippy.js": "^6.3.1",
-    "tiptap": "^1.32.1",
-    "tiptap-extensions": "^1.35.1",
     "typesafe-vuex": "^3.1.1",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.0",
