--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html2canvas": "^1.0.0-rc.7",
     "intersection-observer": "^0.12.0",
     "jest": "^26.6.3",
+    "lodash": "^4.17.21",
     "piexifjs": "^1.0.6",
     "register-service-worker": "^1.0.0",
     "sass": "^1.32.6",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@mdi/js": "^5.9.55",
     "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
     "@types/sanitize-html": "^1.27.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
