--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#1976d2",
   "theme_color": "#1976d2"
 }
