--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Chafan",
-  "short_name": "Chafan",
+  "name": "茶饭",
+  "short_name": "茶饭",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
