Support Youtube iframe

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@sentry/tracing": "^5.30.0",
     "@sentry/vue": "^5.30.0",
     "axios": "^0.21.1",
-    "chafan-vue-editors": "^0.4.4",
+    "chafan-vue-editors": "^0.5.0",
     "core-js": "^3.8.3",
     "dayjs": "^1.10.4",
     "dompurify": "^2.2.7",
+    "get-youtube-id": "^1.0.1",
     "highlightjs": "^9.16.2",
     "html2canvas": "^1.0.0-rc.7",
     "intersection-observer": "^0.12.0",
