--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@sentry/tracing": "^6.5.1",
     "@sentry/vue": "^6.5.1",
     "axios": "^0.21.1",
-    "chafan-vue-editors": "^0.5.2",
+    "chafan-vue-editors": "^0.5.3",
     "core-js": "^3.8.3",
     "dayjs": "^1.10.4",
     "dompurify": "^2.2.7",
@@ -25,6 +25,7 @@
     "html2canvas": "^1.0.0-rc.7",
     "intersection-observer": "^0.12.0",
     "jest": "^26.6.3",
+    "jsdiff": "^1.1.1",
     "lodash": "^4.17.21",
     "piexifjs": "^1.0.6",
     "qrious": "^4.0.2",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@mdi/js": "^5.9.55",
+    "@types/diff": "^5.0.0",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/sanitize-html": "^1.27.1",
