--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@sentry/tracing": "^6.7.2",
     "@sentry/vue": "^6.7.2",
     "axios": "^0.21.1",
-    "chafan-vue-editors": "^0.8.0",
+    "chafan-vue-editors": "^0.8.1",
     "core-js": "^3.8.3",
     "dayjs": "^1.10.4",
     "dompurify": "^2.2.7",
@@ -60,6 +60,8 @@
     "babel-core": "6.26.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "css-select": "^4.1.3",
+    "css-what": "^5.0.1",
     "eslint": "^7.21.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
@@ -67,7 +69,7 @@
     "express-ws": "^4.0.0",
     "husky": "=4",
     "lint-staged": "^10.5.4",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.0",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.1",
     "selenium-webdriver": "^4.0.0-alpha.8",
