--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "vue-jest": "^3.0.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.4.3",
+    "vuetify": "^2.5.x",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
