--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@vue/test-utils": "^1.1.3",
     "babel-core": "6.26.3",
     "body-parser": "^1.19.0",
+    "command-line-args": "^5.2.0",
     "cors": "^2.8.5",
     "css-select": "^4.1.3",
     "css-what": "^5.0.1",
