--- a/.env.local
+++ b/.env.local
@@ -9,3 +9,4 @@ VUE_APP_FRAME_SRC=assets.hcaptcha.com newassets.hcaptcha.com www.youtube.com pla
 VUE_APP_SCRIPT_SRC='self' 'unsafe-eval' 'unsafe-inline' cdn.jsdelivr.net hcaptcha.com assets.hcaptcha.com remotejs.com newassets.hcaptcha.com
 VUE_APP_CONNECT_SRC=* data:
 VUE_APP_ENABLE_CAPTCHA=false
+VUE_APP_LAMBDA=https://6mb5u59f3k.execute-api.us-east-1.amazonaws.com
