--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/diff": "^5.0.0",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
+    "@types/node": "^17.0.2",
     "@types/sanitize-html": "^1.27.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
