Fix auto saving bug

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 VUE_APP_API=chafan-test.herokuapp.com
 VUE_APP_NAME=Chafan Test
-VUE_APP_ENV=test
+VUE_APP_ENV=development
 VUE_APP_ADMIN_UUID=
 VUE_APP_HCAPTCHA_SITEKEY=10000000-ffff-ffff-ffff-000000000001
 VUE_APP_DEFAULT_SRC='self' cdn.jsdelivr.net hcaptcha.com assets.hcaptcha.com
