Update vue deps

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build:dev": "vue-cli-service build --mode development",
     "test:unit": "vue-cli-service test:unit",
+    "analyze": "source-map-explorer 'dist/js/*.js' --no-border-checks",
+    "build:dev": "vue-cli-service build --mode development",
     "check:eslint": "eslint .",
-    "check:prettier": "prettier -c .",
-    "analyze": "source-map-explorer 'dist/js/*.js' --no-border-checks"
+    "check:prettier": "prettier -c ."
   },
   "dependencies": {
     "@hcaptcha/vue-hcaptcha": "^0.3.0",
@@ -23,7 +23,6 @@
     "highlightjs": "^9.16.2",
     "html2canvas": "^1.0.0-rc.7",
     "intersection-observer": "^0.12.0",
-    "jest": "^26.6.3",
     "jsdiff": "^1.1.1",
     "lodash": "^4.17.21",
     "piexifjs": "^1.0.6",
@@ -51,12 +50,12 @@
     "@types/sanitize-html": "^1.27.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
-    "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "^4.5.11",
-    "@vue/cli-plugin-typescript": "^4.5.11",
-    "@vue/cli-plugin-unit-jest": "^4.5.11",
-    "@vue/cli-service": "^4.5.11",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-eslint": "~5.0.4",
+    "@vue/cli-plugin-pwa": "~5.0.4",
+    "@vue/cli-plugin-typescript": "~5.0.4",
+    "@vue/cli-plugin-unit-jest": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.1.3",
@@ -72,15 +71,16 @@
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "husky": "=4",
+    "jest": "^27.1.0",
     "lint-staged": "^10.5.4",
     "node-sass": "^7.0.0",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.1",
     "source-map-explorer": "^2.5.2",
     "ts-jest": "^26.5.0",
-    "typescript": "^4.2.3",
+    "typescript": "~4.5.5",
     "typescript-eslint": "^0.0.1-alpha.0",
-    "vue-cli-plugin-vuetify": "^2.1.0",
+    "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-template-compiler": "^2.5.22",
     "vuetify-loader": "^1.7.2",
     "webpack": "^4.46.0"
