--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chafan-vue-editors": "^0.9.4",
     "core-js": "^3.8.3",
     "dayjs": "^1.10.4",
+    "diff": "^5.0.0",
     "dompurify": "^2.2.7",
     "highlightjs": "^9.16.2",
     "html2canvas": "^1.0.0-rc.7",
@@ -48,8 +49,8 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^17.0.2",
     "@types/sanitize-html": "^1.27.1",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "@vue/cli-plugin-babel": "~5.0.4",
     "@vue/cli-plugin-eslint": "~5.0.4",
     "@vue/cli-plugin-pwa": "~5.0.4",
