--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the action will run.
 on:
   push:
-    branches: [master]
+    branches: [master, dev, preview, stag]
   # Triggers the workflow on push or pull request events but only for the master branch
   pull_request:
     branches: [master, stag, prod]
@@ -20,10 +20,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.4
