--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "analyze": "source-map-explorer 'dist/js/*.js' --no-border-checks",
-    "build:dev": "vue-cli-service build --mode development",
-    "check:eslint": "eslint .",
-    "check:prettier": "prettier -c ."
+    "build:dev": "vue-cli-service build --mode development"
   },
   "dependencies": {
     "@hcaptcha/vue-hcaptcha": "^0.3.0",
@@ -17,10 +15,10 @@
     "@sentry/vue": "^7.8.0",
     "axios": "^0.21.2",
     "chafan-vue-editors": "^0.9.4",
-    "core-js": "^3.8.3",
+    "core-js": "^3.40.0",
     "dayjs": "^1.10.4",
     "diff": "^5.0.0",
-    "dompurify": "^2.2.7",
+    "dompurify": "^2.5.8",
     "highlightjs": "^9.16.2",
     "html2canvas": "^1.0.0-rc.7",
     "intersection-observer": "^0.12.0",
@@ -29,61 +27,51 @@
     "piexifjs": "^1.0.6",
     "qrious": "^4.0.2",
     "register-service-worker": "^1.0.0",
-    "sass": "^1.32.6",
+    "sass": "^1.85.0",
     "typesafe-vuex": "^3.1.1",
     "vee-validate": "^3.4.5",
-    "vue": "^2.6.0",
+    "vue": "^2.7.14",
     "vue-class-component": "^7.2.6",
     "vue-i18n": "^8.22.4",
     "vue-jest": "^3.0.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.x",
+    "vuetify": "^2.7.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
     "@mdi/js": "^5.9.55",
-    "@sentry/webpack-plugin": "^1.18.7",
+    "@sentry/webpack-plugin": "^3.2.0",
     "@types/diff": "^5.0.0",
     "@types/jest": "^27.4.1",
-    "@types/lodash": "^4.14.168",
     "@types/node": "^17.0.2",
     "@types/sanitize-html": "^1.27.1",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "@vue/cli-plugin-babel": "~5.0.4",
-    "@vue/cli-plugin-eslint": "~5.0.4",
-    "@vue/cli-plugin-pwa": "~5.0.4",
-    "@vue/cli-plugin-typescript": "~5.0.4",
-    "@vue/cli-plugin-unit-jest": "~5.0.4",
-    "@vue/cli-service": "~5.0.4",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-pwa": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-plugin-unit-jest": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/cli-shared-utils": "~5.0.8",
     "@vue/test-utils": "^1.1.3",
-    "babel-core": "6.26.3",
+    "autoprefixer": "^10.4.20",
     "body-parser": "^1.19.0",
     "command-line-args": "^5.2.0",
     "cors": "^2.8.5",
     "css-select": "^4.1.3",
     "css-what": "^5.0.1",
-    "eslint": "^7.21.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
     "express": "^4.17.3",
     "express-ws": "^4.0.0",
-    "husky": "=4",
     "jest": "^27.1.0",
     "lint-staged": "^10.5.4",
-    "node-sass": "^7.0.0",
     "prettier": "^2.2.1",
     "sass-loader": "^10.1.1",
     "source-map-explorer": "^2.5.2",
     "ts-jest": "^27.1.4",
     "typescript": "~4.5.5",
-    "typescript-eslint": "^0.0.1-alpha.0",
-    "vue-cli-plugin-vuetify": "~2.4.8",
+    "vue-cli-plugin-vuetify": "^2.5.8",
     "vue-template-compiler": "^2.5.22",
-    "vuetify-loader": "^1.7.2",
+    "vuetify-loader": "^1.9.2",
     "webpack": "^4.46.0"
   },
   "postcss": {
@@ -117,17 +105,5 @@
       "jest-serializer-vue"
     ],
     "testURL": "http://localhost/"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx,vue,js}": [
-      "prettier --write",
-      "eslint --cache --fix"
-    ],
-    "*.{css,md,scss,html}": "prettier --write"
   }
 }
