--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,11 @@
 
 name: CI
 
-# Controls when the action will run.
 on:
   push:
-    branches: [master, dev, preview, stag]
-  # Triggers the workflow on push or pull request events but only for the master branch
+    branches: [master, dev, preview]
   pull_request:
-    branches: [master, stag, prod]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches: [master, preview]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
