--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.7.2",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -69,7 +70,7 @@
     "vue-cli-plugin-vuetify": "^2.5.8",
     "vue-template-compiler": "^2.5.22",
     "vuetify-loader": "^1.9.2",
-    "webpack": "^4.46.0"
+    "webpack": "^4.47.0"
   },
   "postcss": {
     "plugins": {
