--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@vue/cli-shared-utils": "~5.0.8",
     "@vue/test-utils": "^1.3.6",
     "autoprefixer": "^10.4.20",
+    "babel-core": "^7.0.0-bridge.0",
     "body-parser": "^1.20.3",
     "command-line-args": "^6.0.0",
     "css-select": "^5.1.0",
@@ -63,6 +64,8 @@
     "express-ws": "^5.0.2",
     "jest": "^27.5.1",
     "lint-staged": "^15.2.10",
+    "postcss": "^8.5.6",
+    "postcss-html": "^1.8.0",
     "prettier": "^3.3.3",
     "sass-loader": "^10.5.2",
     "source-map-explorer": "^2.5.3",
