--- a/package.json
+++ b/package.json
@@ -10,67 +10,67 @@
     "build:dev": "vue-cli-service build --mode development"
   },
   "dependencies": {
-    "@sentry/tracing": "^7.8.0",
-    "@sentry/vue": "^7.8.0",
-    "axios": "^1.10.0",
+    "@sentry/tracing": "^7.119.2",
+    "@sentry/vue": "^7.119.2",
+    "axios": "^1.12.2",
     "chafan-vue-editors": "^0.9.4",
     "core-js": "^3.40.0",
-    "dayjs": "^1.10.4",
-    "diff": "^5.0.0",
+    "dayjs": "^1.11.13",
+    "diff": "^5.2.0",
     "dompurify": "^3.2.6",
     "highlightjs": "^9.16.2",
-    "html2canvas": "^1.0.0-rc.7",
-    "intersection-observer": "^0.12.0",
+    "html2canvas": "^1.4.1",
+    "intersection-observer": "^0.12.2",
     "lodash": "^4.17.21",
     "piexifjs": "^1.0.6",
     "qrious": "^4.0.2",
-    "register-service-worker": "^1.0.0",
+    "register-service-worker": "^1.7.2",
     "sass": "^1.85.0",
     "typesafe-vuex": "^3.1.1",
-    "vee-validate": "^3.4.5",
+    "vee-validate": "^3.4.15",
     "vue": "^2.7.16",
     "vue-class-component": "^7.2.6",
-    "vue-i18n": "^8.22.4",
+    "vue-i18n": "^8.28.2",
     "vue-jest": "^3.0.7",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.1",
+    "vue-router": "^3.6.5",
     "vuetify": "^2.7.2",
     "vuex": "^3.6.2",
-    "uuid": "^9.0.1"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
+    "@babel/core": "^7.26.0",
     "@mdi/js": "^7.4.47",
     "@sentry/webpack-plugin": "^3.2.0",
-    "@types/diff": "^5.0.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.2",
-    "@types/sanitize-html": "^1.27.1",
+    "@types/diff": "^5.2.3",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^17.0.45",
+    "@types/sanitize-html": "^2.13.0",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-pwa": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-plugin-unit-jest": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@vue/cli-shared-utils": "~5.0.8",
-    "@vue/test-utils": "^1.1.3",
+    "@vue/test-utils": "^1.3.6",
     "autoprefixer": "^10.4.20",
-    "body-parser": "^1.19.0",
-    "command-line-args": "^5.2.0",
-    "css-select": "^4.1.3",
-    "css-what": "^5.0.1",
-    "express": "^4.17.3",
-    "express-ws": "^4.0.0",
-    "jest": "^27.1.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "sass-loader": "^10.1.1",
-    "source-map-explorer": "^2.5.2",
-    "ts-jest": "^27.1.4",
-    "typescript": "~4.5.5",
+    "body-parser": "^1.20.3",
+    "command-line-args": "^6.0.0",
+    "css-select": "^5.1.0",
+    "css-what": "^6.1.0",
+    "express": "^4.21.1",
+    "express-ws": "^5.0.2",
+    "jest": "^27.5.1",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "sass-loader": "^10.5.2",
+    "source-map-explorer": "^2.5.3",
+    "ts-jest": "^27.1.5",
+    "typescript": "~4.9.5",
     "vue-cli-plugin-vuetify": "^2.5.8",
-    "vue-template-compiler": "^2.5.22",
+    "vue-template-compiler": "^2.7.16",
     "vuetify-loader": "^1.9.2",
-    "webpack": "^4.47.0"
+    "webpack": "^5.96.1"
   },
   "postcss": {
     "plugins": {
@@ -80,7 +80,7 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 10"
+    "not dead"
   ],
   "jest": {
     "moduleFileExtensions": [
@@ -105,3 +105,4 @@
     "testURL": "http://localhost/"
   }
 }
+
