--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "analyze": "source-map-explorer 'dist/js/*.js' --no-border-checks",
-    "build:dev": "vue-cli-service build --mode development"
+    "build:dev": "vue-cli-service build --mode development",
+    "lint:css": "stylelint \"src/**/*.{css,scss,vue}\"",
+    "lint:css:fix": "stylelint \"src/**/*.{css,scss,vue}\" --fix"
   },
   "dependencies": {
     "@sentry/tracing": "^7.119.2",
@@ -27,6 +29,7 @@
     "register-service-worker": "^1.7.2",
     "sass": "^1.85.0",
     "typesafe-vuex": "^3.1.1",
+    "uuid": "^11.0.3",
     "vee-validate": "^3.4.15",
     "vue": "^2.7.16",
     "vue-class-component": "^7.2.6",
@@ -35,8 +38,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.6.5",
     "vuetify": "^2.7.2",
-    "vuex": "^3.6.2",
-    "uuid": "^11.0.3"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -65,6 +67,9 @@
     "prettier": "^3.3.3",
     "sass-loader": "^10.5.2",
     "source-map-explorer": "^2.5.3",
+    "stylelint": "^16.25.0",
+    "stylelint-config-recommended-vue": "^1.6.1",
+    "stylelint-config-standard-scss": "^14.0.0",
     "ts-jest": "^27.1.5",
     "typescript": "~4.9.5",
     "vue-cli-plugin-vuetify": "^2.5.8",
@@ -105,4 +110,3 @@
     "testURL": "http://localhost/"
   }
 }
-
