fix github action
Signed-off-by: Chai <bark@bite.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           node-version: 22.16.0
 
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Build
         run: |
           source example.env
