--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,10 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
-          node-version: 18.17.1
+          node-version: 22.16.0
+
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Build
         run: |
