--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@mdi/js": "^7.4.47",
-    "@sentry/webpack-plugin": "^3.2.0",
     "@types/diff": "^5.2.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
@@ -108,5 +107,6 @@
       "jest-serializer-vue"
     ],
     "testURL": "http://localhost/"
-  }
+  },
+  "packageManager": "yarn@4.9.1"
 }
