--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
     "vuetify-loader": "^1.9.2",
     "webpack": "^5.96.1"
   },
+  "resolutions": {
+    "node-forge": "^1.3.3"
+  },
   "postcss": {
     "plugins": {
       "autoprefixer": {}
