--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "webpack": "^5.96.1"
   },
   "resolutions": {
-    "node-forge": "^1.3.3"
+    "node-forge": "^1.3.3",
+    "glob": "^10.5.0"
   },
   "postcss": {
     "plugins": {
