--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "vue": "^2.7.16",
     "vue-class-component": "^7.2.6",
     "vue-i18n": "^8.28.2",
-    "vue-jest": "^3.0.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.6.5",
     "vuetify": "^2.7.2",
@@ -79,6 +78,10 @@
     "vuetify-loader": "^1.9.2",
     "webpack": "^5.96.1"
   },
+  "resolutions": {
+    "node-forge": "^1.3.3",
+    "glob": "^10.5.0"
+  },
   "postcss": {
     "plugins": {
       "autoprefixer": {}
@@ -94,21 +97,16 @@
       "js",
       "jsx",
       "json",
-      "vue",
       "ts",
       "tsx"
     ],
     "transform": {
-      "^.+\\.vue$": "vue-jest",
       ".+\\.(css|styl|less|sass|scss|svg|png|jpg|ttf|woff|woff2)$": "jest-transform-stub",
       "^.+\\.tsx?$": "ts-jest"
     },
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
     },
-    "snapshotSerializers": [
-      "jest-serializer-vue"
-    ],
     "testURL": "http://localhost/"
   },
   "packageManager": "yarn@4.9.1"
