--- a/package.json
+++ b/package.json
@@ -14,23 +14,41 @@
   "dependencies": {
     "@sentry/tracing": "^7.119.2",
     "@sentry/vue": "^7.119.2",
+    "@tiptap/core": "^2.0.0-beta.220",
+    "@tiptap/extension-code-block": "^2.0.0-beta.220",
+    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.220",
+    "@tiptap/extension-link": "^2.0.0-beta.220",
+    "@tiptap/extension-mention": "^2.0.0-beta.220",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.220",
+    "@tiptap/extension-underline": "^2.0.0-beta.220",
+    "@tiptap/pm": "^2.0.0-beta.220",
+    "@tiptap/starter-kit": "^2.0.0-beta.220",
+    "@tiptap/suggestion": "^2.0.0-beta.220",
+    "@tiptap/vue-2": "^2.0.0-beta.220",
     "axios": "^1.13.2",
     "core-js": "^3.47.0",
     "dayjs": "^1.11.19",
     "diff": "^5.2.0",
     "dompurify": "^3.3.1",
+    "get-youtube-id": "^1.0.1",
     "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
+    "lowlight": "^2.9.0",
     "piexifjs": "^1.0.6",
+    "prosemirror-state": "^1.4.3",
     "qrious": "^4.0.2",
     "register-service-worker": "^1.7.2",
     "sass": "^1.97.2",
+    "tippy.js": "^6.3.7",
     "typesafe-vuex": "^3.1.1",
     "uuid": "^11.0.3",
+    "vditor": "^3.11.2",
     "vee-validate": "^3.4.15",
     "vue": "^2.7.16",
+    "vue-class-component": "^7.2.6",
     "vue-i18n": "^8.28.2",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.6.5",
     "vuetify": "^2.7.2",
     "vuex": "^3.6.2"
